Fixed styling bug on safari.

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -13,7 +13,7 @@
     position: absolute;
     color: #FFFF;
     font-size: 6rem;
-    line-height: 0.6em;
+    top: -2.5rem;
     left: 0.5em;
     background: none;
 	  border: none;
